--- a/subpaginas/actividades_de_los_sabados.html
+++ b/subpaginas/actividades_de_los_sabados.html
@@ -88,6 +88,99 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="d-none d-md-flex justify-content-center">
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDADE DE ADOLESCENTES</h2>
+            </div>
+            <div class="img_jovenes container">
+              <img src="../img/adolescentes/adolescentes-1.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-2.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-3.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-4.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-5.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-6.jpg" alt="adolescentes">
+              <img src="../img/adolescentes/adolescentes-7.jpg" alt="adolescentes">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="d-none d-md-flex justify-content-center">
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDADE DE JOVENES</h2>
+            </div>
+            <div class="img_jovenes container">
+              <img src="../img/jovenes/jovenes_1.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_2.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_3.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_4.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_5.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_6.jpg" alt="jovenes">
+              <img src="../img/jovenes/jovenes_7.jpg" alt="jovenes">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="d-none d-md-flex justify-content-center">
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDAD EN EL CENTRO RECREATIVO "EL BUEN PASTOR"</h2>
+            </div>
+            <div class="img_jovenes container">
+              <img src="../img/actividades_sabados/buen_pastor-1.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-2.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-3.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-4.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-5.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-6.jpg" alt="centro recreativo el buen pastor">
+              <img src="../img/actividades_sabados/buen_pastor-7.jpg" alt="centro recreativo el buen pastor">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="d-flex justify-content-center d-md-none">
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDAD DE ADOLESCENTES</h2>
+            </div>
+            <div>
+              <img class="w-100" src="../img/adolescentes/adolescentes-6.jpg" alt="taller de relaciones">
+            </div>
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDAD DE JOVENES</h2>
+            </div>
+            <div>
+              <img class="w-100" src="../img/jovenes/jovenes_6.jpg" alt="taller de relaciones">
+            </div>
+            <div class="container">
+              <h2 class="m-4 text-center">ACTIVIDAD EN EL BUEN PASTOR</h2>
+            </div>
+            <div class="d-flex justify-content-center">
+              <img src="../img/actividades_sabados/buen_pastor-3.jpg" alt="taller de relaciones">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <h2 class="m-4 text-center">TALLER DE RELACIONES</h2>
+            </div>
+            <div>
+              <img class="w-100 h-75" src="../img/actividades_sabados/taller_de_relaciones.jpg" alt="taller de relaciones">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer class="container-fluit footer">
       <div class="container">
         <div class="row">
