--- a/subpaginas/alabanza.html
+++ b/subpaginas/alabanza.html
@@ -89,12 +89,19 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="container-fluit portada_book">
+      <section class="col-12">
+        <div class="w-100 container-fluit portada_book">
           <img class="w-100" src="../img/alabanza/portada.jpg" alt="alabad a dios">
         </div>
       </section>
-      <section>
+      <section class="d-flex mt-5 mb-5 d-md-none">
+        <div class="container">
+          <div class="row">
+            <object class="pdf_alabanza" data="../pdf/cancionerio_iglesia-urquiza.pdf" type="application/pdf"></object>
+          </div>
+        </div>
+      </section>
+      <section class="d-none d-md-flex">
         <div class="container container_book d-flex justify-content-center align-content-center" id="container_book">
           <div class="book-content">
             <div class="book">
@@ -249,11 +256,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="cancionero">
-        <div class="container-fluit">
-          <object class="pdf_alabanza" type="application/pdf"  data="../pdf/cancionerio_iglesia-urquiza.pdf"></object>
         </div>
       </section>
     </main>
