--- a/subpaginas/cena_del_señor.html
+++ b/subpaginas/cena_del_señor.html
@@ -88,6 +88,26 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="container-fluit">
+          <img class="w-100 h-100vh" src="../img/cena_del_señor" alt="cena del señar">
+        </div>
+      </section>
+      <section>
+        <div class="container col-12 col-md-8">
+          <div class="row d-flex justify-content-center">
+            <h2 class="col-10 text-center">¿Cuál es la importancia de la Cena del Señor / Comunión Cristiana?</h2>
+            <p class="text-center">Un estudio de la Cena del Señor es una experiencia que estremece el alma por el profundo significado que representa. Fue durante la antigua celebración de la Pascua, en la tarde de Su muerte, que Jesús instituyó una nueva y significativa cena que celebramos hasta el día de hoy. Es una parte integral de la adoración cristiana. Nos hace recordar la muerte y resurrección del Señor, mirando hacia el futuro, esperando Su regreso en gloria.</p>
+            <p>La Pascua era la festividad anual más sagrada de la religión judía. Conmemoraba la última plaga en Egipto, cuando los primogénitos de los egipcios murieron y los israelitas fueron perdonados por la sangre del cordero que fue rociada en los postes de sus puertas. Las familias asaron el cordero y se lo comieron con pan sin levadura. El mandato de Dios era que esta festividad fuera celebrada a través de todas las generaciones futuras. La historia se registra en Éxodo 12.</p>
+            <p>Durante la celebración de la pascua, Jesús tomó un pedazo de pan y dio gracias a Dios. Mientras partía el pan y se los daba, Él dijo, “Tomad, comed; esto es Mi cuerpo que por vosotros es partido”. Asimismo, tomó también la copa, después de haber cenado. Les dio la copa, y bebiendo ellos de ella, Él dijo; “Esta copa es el Nuevo Pacto en Mi sangre; haced esto todas las veces que la bebiereis en memoria de Mí”. Después Él concluyó la fiesta cantando un himno (Mateo 26:30) y todos salieron esa noche al Monte de los Olivos. Fue ahí donde Jesús fue traicionado por Judas, como se predijo. El día siguiente Él fue crucificado.</p>
+            <p>Los relatos de la Cena del Señor se encuentran en los Evangelios de Mateo 26:26-29, Marcos 14:17-25, Lucas 22:7-22, y Juan 13:21-30. El apóstol Pablo escribió sobre la Cena del Señor en 1 Corintios 11:23-29. Pablo incluye una declaración que no se encuentra en los Evangelios: “De manera que cualquiera que comiere de este pan o bebiere de esta copa del Señor indignamente, será culpado del cuerpo y de la sangre del Señor. Por tanto, pruébese cada uno a sí mismo, y coma así del pan, y beba de la copa. Porque el que come y bebe indignamente, sin discernir el cuerpo del Señor, juicio come y bebe para sí” (1 Corintios 11:27-29). Podríamos preguntar qué significa el participar del partimiento del pan y de la copa “de manera indigna”. Puede significar el tomar con indiferencia el verdadero significado del pan y de la copa, olvidando el tremendo precio que nuestro Salvador pagó por nuestra salvación. O puede significar el permitir que la ceremonia se vuelva un ritual muerto y rutinario, o venir a la mesa con un pecado sin confesar. Para guardar la instrucción de Pablo, cada uno debe examinarse a sí mismo antes de comer del pan y beber de la copa.</p>
+            <p>Otra declaración que hace Pablo, y que no está incluida en los Evangelios es, “Así, pues, todas las veces que comiereis este pan, y bebiereis esta copa, la muerte del Señor anunciáis hasta que Él venga” (1 Corintios 11:26). Esto establece un tiempo límite para la ceremonia – hasta que Él venga. De estas breves declaraciones, aprendemos cómo utilizó Jesús dos de los elementos más frágiles como símbolos de Su cuerpo y sangre, y los instituyó como un monumento a Su muerte. No fue un monumento de mármol tallado o figuras de bronce, sino de pan y jugo de uva.</p>
+            <p>Él declaró que el pan simbolizaba Su cuerpo, el cual sería partido – ningún hueso Suyo fue quebrado, pero Su cuerpo fue tan terriblemente flagelado que apenas era reconocible (Salmo 22:12-17; Isaías 53:4-7). El jugo de uva hablaba de Su sangre, indicando la terrible muerte que en breve Él experimentaría. Él, el perfecto Hijo de Dios, se convirtió en el cumplimiento de incontables profecías del Antiguo Testamento concernientes al Redentor (Génesis 3:15; Salmo 22; Isaías 53, etc.). Cuando Él dijo: “Haced esto en memoria de Mí”, Jesús indicó que esta era una ceremonia que debía ser practicada en el futuro. También indicaba que la Pascua, que requería la muerte de un cordero y señalaba al futuro la venida del Cordero de Dios que quitaría el pecado del mundo, se cumplía en la Cena del Señor. El Nuevo Pacto tomó su lugar cuando Cristo, el Cordero de Pascua, fue sacrificado (1 Corintios 5:7; Hebreos 8:8-13). Este sistema sacrificial ya no era necesario (Hebreos 9:25-28). La Cena del Señor o Comunión Cristiana, es un recuerdo de lo que Cristo hizo por nosotros y una celebración de lo que recibimos como resultado de Su sacrificio.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="container-fluit footer">
       <div class="container">
         <div class="row">
