--- a/subpaginas/evangelizacion.html
+++ b/subpaginas/evangelizacion.html
@@ -88,6 +88,35 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="container-fluit">
+          <img class="w-100 h-100vh" src="../img/evangelizacion_portada.jpg" alt="hechos 13:47">
+        </div>
+      </section>
+      <section class="mt-5">
+        <div class="container col-12 col-md-8">
+          <div class="row d-flex justify-content-center">
+            <h2 class="text-center">EVANGELIZACION</h2>
+            <p>Evangelizar es dar testimonio, de una manera sencilla y directa, de Dios revelado por Jesucristo mediante el Espíritu Santo. Testimoniar que ha amado al mundo en su Verbo Encarnado y ha llamado a la humanidad a la vida eterna.</p>
+            <p>La evangelización también debe contener siempre una clara proclamación de que en Jesucristo, Hijo de Dios hecho hombre, muerto y resucitado, se ofrece la salvación a todos los hombres, como don de la gracia y de la misericordia de Dios. Comprende además, la predicación de la esperanza en las promesas hechas por Dios mediante la nueva alianza en Jesucristo; la predicación del amor de Dios para con nosotros y de nuestro amor hacia Dios, la predicación del amor fraterno para con todos los hombres —capacidad de donación y de perdón, de renuncia, de ayuda al hermano que por descender del amor de Dios, es el núcleo del Evangelio.</p>
+            <h3>MÉTODOS PARA LA EVANGELIZACIÓN</h3>
+            <p>En la Biblia, el Santo Padre nos presenta los métodos principales de la evangelización. A continuación un resumen de los puntos más significativos:</p>
+            <h3>Testimonio de vida:</h3>
+            <p>El ejemplo siempre ha sido un método de enseñaza efectivo y la primera forma de evangelización de la Iglesia es el testimonio de vida auténticamente cristiano. Nuestra vida debe reflejar la fielidad a Jesucristo, el desapego a los bienes del mundo y el apego a lo espiritual. Es decir, vivir una vida de santidad y testimoniarla a los hermanos.</p>
+            <h3>Predicación viva:</h3>
+            <p>Pablo en su carta a los Romanos explica claramente que la fe aumenta por el acto de escuchar. ¿Cómo, pues, invocarán a aquel en el cual no han creído? ¿Y cómo creerán en aquel de quien no han oído? ¿Y cómo oirán sin haber quien les predique?... Luego, la fe viene de la audición, y la audición, por la palabra de Cristo" (Rom. 10, 14. 17.)Aunque la sociedad moderna se muestre indiferente ante los discursos, la predicación y la proclamación verbal del Evangelio es indispensable para la Evangelización. No debe desalentarnos este gran reto. Por el contrario debe animarnos el saber que nuestro testimonio de vida, unida a una predicación efectiva, atraerá muchas almas a Dios.</p>
+            <h3>Los medios de comunicación:</h3>
+            <p>En este útimo siglo, las nuevas tecnologías le han dado a los medios de comunicación social un enfoque mucho más amplio que en sus inicios. La Internet y el uso de las redes sociales provoca un flujo de comunicación constante y hasta abrumador. La Iglesia utiliza estos nuevos medios para evanelizar e invita a todo el pueblo de Dios a hacer lo mismo.</p>
+            <h3>Contacto personal:</h3>
+            <p>La transmisión del Evangelio persona a persona es indispensable. El mismo Jesucristo la utilizó constantemente. Prueba de ello, lo encontramos en los pasajes bíblicos donde muestran sus conversaciones con  Nicodemo, Zaqueo, la Samaritana, Simón el fariseo y lo mismo han hecho los Apóstoles. A fin de cuentas no existe una mejor manera de comunicar la palabra de Dios, que no sea transmitir a otros nuestra propia experiencia de fe.</p>
+            <h3>Misioneros:</h3>
+            <p>Pablo en su carta a los Romanos se pregunta: “Ahora bien, ¿cómo van a invocar a aquel en quien no creen? ¿Y cómo van a creer en él, si no les ha sido anunciado? ¿Y cómo van a ser anunciado, si nadie es enviado? Por eso dice la escritura: ¡Qué hermosos son los pies de los que anuncian buenas noticias!"</p>
+
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="container-fluit footer">
       <div class="container">
         <div class="row">
