--- a/subpaginas/jovenes.html
+++ b/subpaginas/jovenes.html
@@ -138,25 +138,15 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="container ">
-          <div class="row">
-            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="d-flex justify-content-center">
-                <video class="w-50 w-md-100" controls src="../img/adolescentes/resumen_2022.mp4"></video>  
-              </div>
-            </article >
-            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="d-flex justify-content-center">
-                <video class="w-50 w-md-100" controls src="../img/adolescentes/bautizmo_2022.mp4"></video>  
-              </div>
-            </article >
-            <article class="col-12 col-md-6 col-lg-4 video_adoles" >
-              <div class="d-flex justify-content-center">
-                <video class="w-50 w-md-100" controls src="../img/adolescentes/dia_del_amigo.mp4"></video>  
-              </div>
-            </article >
-          </div>
+      <section class="d-none d-md-flex justify-content-center">
+        <div class="img_jovenes container">
+          <img src="../img/jovenes/jovenes_1.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_2.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_3.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_4.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_5.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_6.jpg" alt="jovenes">
+          <img src="../img/jovenes/jovenes_7.jpg" alt="jovenes">
         </div>
       </section>
       <section>
