--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <h2 class="text-center" >¿Tenés un tema de Oración?</h2>
             <p class="text-center">Comparte con nosotros tu necesidad,<br>
                 estaremos orando por vos.</p>
-            <a class="enlace_temtes" href="#">Dejar Oración</a>
+            <a class="enlace_temtes" href="./paginas/tema_de_oracion.html" target="_blank">Dejar Oración</a>
         </div>
         <div class="oracion_testimonio text-center col-12 col-md-5">
             <h2>Contanos tu TESTIMONIO</h2>
             <p>Comparte con nosotros como DIOS,<br>
                 cambió tu vida.</p>
-            <a class="enlace_temtes" href="#">dejar testimonio</a>
+            <a class="enlace_temtes" href="./paginas/testimonio.html" target="_blank">dejar testimonio</a>
         </div>
         </div>
       </div>
