finalizacion de formularios

--- a/subpaginas/estudio_de_la_biblia.html
+++ b/subpaginas/estudio_de_la_biblia.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="Estudiamos la biblia conla ayuda del Pastor a cargo de la reunión">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Estudio de la Biblia</title>
     <script
       src="https://kit.fontawesome.com/c50a312c0b.js"
       crossorigin="anonymous"
