--- a/subpaginas/evangelizacion.html
+++ b/subpaginas/evangelizacion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="Dios nos a dejado como tarea evangelizar, y llevar su palabra">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Evangelización</title>
     <script
       src="https://kit.fontawesome.com/c50a312c0b.js"
       crossorigin="anonymous"
@@ -116,6 +117,45 @@
           </div>
         </div>
       </section>
+      <!-- <section>
+        <div class="container-fluit oracion-testimonio">
+          <div class="row h-100 m-0 d-flex justify-content-center">
+            <div class="container col-12 col-md-4 w-75 text-center form-textindex" >
+              <h2>Queres que te visitemos?</h2>
+              <p>Dejanos tus datos y horario que estés disponible, y un hermoso grupo de hermanos te visitará para compartir la palabra de Dios.</p>
+            </div>
+            <div class="container mt-4 col-12 d-flex justify-content-center">
+              <form action="enviar_email" name="tema_de_oracion" netlify>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12 col-md-4">
+                      <input class="style_input" size="20" required maxlength="20" type="text" name="nombre" id="nombre" placeholder="Nombre">
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <input class="style_input" size="20" required maxlength="40" type="text" name="direccion" id="direccion" placeholder="Dirección">
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <input class="style_input" size="27" maxlength="40" required type="email" name="email" id="email" placeholder="Email">
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <input class="style_input" size="27" maxlength="40" required type="number" name="telefono de Contacto" id="tel" placeholder="Telefono de Contacto">
+                    </div>
+                    <div class="col-12 col-md-4">
+                      <input class="style_input" size="27" maxlength="40" required type="datetime-local" name="horafecha" id="email" placeholder="Fecha y Hora">
+                    </div>
+                    <div class="col-12 d-flex justify-content-start">
+                      <textarea class="style_input-textarea" name="tema_de_oracion" id="textarea" cols="30" rows="10" placeholder="Dejanos algún comentario..."></textarea>
+                    </div>
+                    <div class="col-12 col-md-8 d-flex justify-content-center">
+                      <input class="style_input-submit" type="submit" name="suscribite" value="Compartinos" >
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section> -->
     </main>
     <footer class="container-fluit footer">
       <div class="container">
