--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Iglesia de Urquiza</title>
     <script src="https://kit.fontawesome.com/c50a312c0b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="./css/estilos.css">
-    <link rel="icon" href="./img/logo-iglesia-sin-techo-transparente(negro).png">
+    <link rel="icon" href="../img/logo-iglesia-sin-techo-transparente(negro).png">
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-style">
