--- a/paginas/tema_de_oracion.html
+++ b/paginas/tema_de_oracion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Tema de Oración</title>
     <script src="https://kit.fontawesome.com/c50a312c0b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="icon" href="./img/logo-iglesia-sin-techo-transparente(negro).png">
+    <link rel="icon" href="../img/logo-iglesia-sin-techo-transparente(negro).png">
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-style">
@@ -26,30 +26,36 @@
       </header>
       <main>
         <section>
-          <div class="container">
-            <div class="row">
-              <div class="container-form">
-                <div class="container info-form">
-                  <div class="row">
-                    <h2>Contáctanos</h2>
-                    <p>Estad siempre gozosos. Orad sin cesar. Dad gracias en todo, porque esta es la voluntad de Dios para con vosotros en Cristo Jesús.
-                      1 Tesalonicenses 5:16-18</p>
-                    <i class="fa fa-phone m-2"> 11-2169-7373</i>
-                    <i class="fa fa-envelope m-2"> iglesia.villa.urquiza@gmail.com</i>
-                    <i class="fa fa-map-marked m-2"> Franklin D. Roosevelt 5537, C1431</i>
+          <div class="container-fluit oracion-testimonio">
+            <div class="row m-0 d-flex justify-content-center">
+              <div class="container col-12 col-md-4 w-75 text-center form-textindex" >
+                <h2>Tema de Oración</h2>
+                <p>Estad siempre gozosos. Orad sin cesar. Dad gracias en todo, porque esta es la voluntad de Dios para con vosotros en Cristo Jesús.
+                  1 Tesalonicenses 5:16-18</p>
+              </div>
+              <div class="container mt-4 col-12 col-md-6">
+                <form action="enviar_email" name="tema_de_oracion" netlify>
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-12 col-md-4">
+                        <input class="style_input" size="10" required maxlength="12" type="text" name="nombre" id="nombre" placeholder="Nombre">
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <input class="style_input" size="10" required maxlength="12" type="text" name="Apellido" id="Apellido" placeholder="Apellido">
+                      </div>
+                      <div class="col-12 d-flex justify-content-start">
+                        <input class="style_input" size="27" maxlength="40" required type="email" name="email" id="email" placeholder="Email">
+                      </div>
+                      <div class="col-12 d-flex justify-content-start">
+                        <textarea class="style_input-textarea" name="tema_de_oracion" id="textarea" cols="30" rows="10"></textarea>
+                      </div>
+                      <div class="col-12 col-md-8 d-flex justify-content-center">
+                        <input class="style_input-submit" type="submit" name="suscribite" value="Compartinos" >
+                      </div>
+                    </div>
                   </div>
-                </div>
-                <div class="container">
-                  <div class="row">
-                    <form action="#" autocomplete="off" netlify>
-                      <input type="text" name="nombre" placeholder="Tu Nombre" class="campo">
-                      <input type="emal" name="email" placeholder="Tu Email" class="campo">
-                      <textarea name="mensaje" placeholder="Dejanos tema de oracion..."></textarea>
-                      <input type="submit" name="enviar" value="Enviar Mensaje" class="btn-enviar">
-                  </form>
-                  </div>
-                </div>
-            </div>
+                </form>
+              </div>
             </div>
           </div>
         </section>
