--- a/subpaginas/cena_del_señor.html
+++ b/subpaginas/cena_del_señor.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="celebramos la cena del Señor">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Cena del Señor</title>
     <script
       src="https://kit.fontawesome.com/c50a312c0b.js"
       crossorigin="anonymous"
