--- a/paginas/adolescentes.html
+++ b/paginas/adolescentes.html
@@ -105,7 +105,7 @@
       <section class="sec_lideres" >
         <div class="container-fluit p-2 p-md-4">
           <h2 class="text-center fs-1 mt-4">Nuestros Lideres de Adolescentes</h2>
-          <p class="text-center col-12 w-100 w-md-75 fs-2 m-auto">Como mentores tenemos una gran responsabilidad de formar personas firmes en su fe, que amen a Jesús con pasión y que vivan en su vida con convicciones claras en el evangelio, estos consejos para los jóvenes cristianos serán de muchísima ayuda.</p>
+          <p class="text-center col-12 w-100 w-md-75 fs-2 m-auto">Como mentores tenemos una gran responsabilidad de formar personas firmes en su fé, que amen a Jesús con pasión y que vivan en su vida con convicciones claras en el evangelio, estos consejos para los jóvenes cristianos serán de muchísima ayuda.</p>
         </div>
       </section>
       <section>
