--- a/paginas/servicio.html
+++ b/paginas/servicio.html
@@ -66,6 +66,7 @@
                 <li><a class="navbar-suba" href="../subpaginas/alabanza.html">Alabanza</a></li>
               </ul>
             </li>
+            <li><a class="nav-link navbar-a" href="./servicio.html">Servicios</a></li>
             <li>
               <a class="nav-link navbar-a" href="#">Actividades</a>
               <ul class="navbar-submenu">
