--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/c50a312c0b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"/>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="../img/logo-iglesia-sin-techo-transparente(negro).png">
 </head>
 <body>
@@ -41,18 +41,18 @@
               <li><a class="nav-link navbar-a activo-ul" href="./index.html">Inicio</a></li>
               <li><a class="nav-link navbar-a" href="#">Ministerio</a>
                 <ul class="navbar-submenu" >
-                  <li><a class="navbar-suba" href="./subpaginas/jovenes.html">Jovenes</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/adolescentes.html">Adolescentes</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/escuela_biblica.html">Escuelita Bilica</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/alabanza.html">Alabanza</a></li>
+                  <li><a class="navbar-suba" href="./paginas/jovenes.html">Jovenes</a></li>
+                  <li><a class="navbar-suba" href="./paginas/adolescentes.html">Adolescentes</a></li>
+                  <li><a class="navbar-suba" href="./paginas/escuela_biblica.html">Escuelita Bilica</a></li>
+                  <li><a class="navbar-suba" href="./paginas/alabanza.html">Alabanza</a></li>
                 </ul>
               </li>
               <li><a class="nav-link navbar-a" href="#">Actividades</a>
                 <ul class="navbar-submenu" >
-                  <li><a class="navbar-suba" href="./subpaginas/estudio_de_la_biblia.html">Estudio de La Biblia</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/cena_del_señor.html">Cena del Señor</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/evangelizacion.html">Evangelización</a></li>
-                  <li><a class="navbar-suba" href="./subpaginas/actividades_de_los_sabados.html">Actividades de los Sabados</a></li>
+                  <li><a class="navbar-suba" href="./paginas/estudio_de_la_biblia.html">Estudio de La Biblia</a></li>
+                  <li><a class="navbar-suba" href="./paginas/cena_del_señor.html">Cena del Señor</a></li>
+                  <li><a class="navbar-suba" href="./paginas/evangelizacion.html">Evangelización</a></li>
+                  <li><a class="navbar-suba" href="./paginas/actividades_de_los_sabados.html">Actividades de los Sabados</a></li>
                 </ul>
               </li>
               <li><a class="nav-link navbar-a" href="./paginas/galeria.html">Galeria</a></li>
